[package]
name = "ferryman"
version = "0.1.0"
edition = "2021"
description = "Ferryman — translate documents via a vLLM-served model into bilingual output (EPUB now; txt/subtitles planned)"
license = "LGPL-3.0-or-later"
repository = "https://github.com/iMMIQ/ferryman"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
lol_html = "0.4"
roxmltree = "0.20"
indicatif = "0.17"
futures = "0.3"
sha2 = "0.10"

[profile.release]
opt-level = 2
